--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,16 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Cristhian García Vélez
+avatar: /static/images/avatar.jpg
+occupation: FullStack Developer
+company: Instinto Digital
+email: escipion25@gamail.com
+twitter: https://twitter.com/crisgarlez
+linkedin: https://www.linkedin.com/in/crisgarlez/
+github: https://github.com/crisgarlez
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Hello, my name is Cristhian García, I am a Systems Engineer with several years of experience as a Full Stack Developer with more inclination for Backend development.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+I like learning about technology, especially programming, software architecture, and cloud computing. Outside of technology, I enjoy spending time with my family, playing retro video games and board games.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+I made this blog for the purpose of sharing what I learn and giving back to the community.
