--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -13,4 +13,4 @@ Hello, my name is Cristhian García, I am a Systems Engineer with several years 
 
 I like learning about technology, especially programming, software architecture, and cloud computing. Outside of technology, I enjoy spending time with my family, playing retro video games and board games.
 
-I made this blog for the purpose of sharing what I learn and giving back to the community.
+I made this blog with the purpose of sharing what I have learned and give it back to the community.
