docs: :memo: add first post
Add the first post about JavaScript

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,7 +9,7 @@ linkedin: https://www.linkedin.com/in/crisgarlez/
 github: https://github.com/crisgarlez
 ---
 
-Hello, my name is Cristhian García, I am a Systems Engineer with several years of experience as a Full Stack Developer with more inclination for Backend development.
+Hello, I am a Systems Engineer with several years of experience as a Full Stack Developer with more inclination for Backend development.
 
 I like learning about technology, especially programming, software architecture, and cloud computing. Outside of technology, I enjoy spending time with my family, playing retro video games and board games.
 
